--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,8 @@
     "@nestjs/typeorm": "^9.0.0",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
