--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
+    "@types/react-redux-toastr": "^7.6.2",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
