--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/lodash.shuffle": "^4.2.7",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.5",
